# LoudGain

./: .gitignore  CMakeLists.txt  COPYING  README.md  config.h.in
docs/: LoudGain.md
include/: loudgain.hpp  scan.hpp  tag.hpp
include/mvthreadpool/: mvThreadPool.h
src/: loudgain.cpp  main.cpp  scan.cpp  tag.cpp
